# MIDIOrDie

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  install_base.sh  install_controller.sh  install_game.sh  install_server.sh  install_tensorflow.sh  manifest.h  portaudio_install.sh
13 - Gamma Ray/: notes.mid  song.ini
controller/: .gitignore  Makefile  Shared_Memory.h  common.h  controller.i  fft.cpp  fft.h  fft_histogram.cpp  main  main.cpp  make.sh  poller.h  scoped_thread.h  shared_array.h  shared_buffer.h  socket_client.cpp  socket_client.h  socket_connection.cpp  socket_connection.h  socket_helpers.h  socket_manifest.h  socket_send.h  socket_server.cpp  socket_server.h  test  test.cpp  tone.cpp  tone.h  visualize.py
controller/socket/: Makefile  base.h  client.cpp  client.h  connection.cpp  connection.h  server.cpp  server.h  socket.cpp  socket.h  socket_manifest.h
demogame/: game.py
fft/: CMakeLists.txt  Makefile  fft.cpp  fft.h
fft2midi/: .gitignore  CMakeLists.txt  Makefile  channel.cpp  channel.h  channelbroker.cpp  channelbroker.h  channelbroker_dane.cpp  fft2midi.cpp  fft2midi.h  midi.cpp  midi.h  portbroker.cpp  portbroker.h  sigextr.cpp  sigextr.h  tone.cpp  tone.h
fft2midi/localcontroller/: driver.cpp  localcontroller.h
fftw3/: localcontroller.cpp  localcontroller.i
fofix-master/fofix/core/: Input.py  Player.py
fofix-master/fofix/game/: GameResultsScene.py
fofix-master/fofix/game/guitarscene/instruments/: Instrument.py
games/: .gitignore  Makefile  chordgame.py  driver.cpp  localcontroller.cpp  localcontroller.h
games/localcontroller/: Makefile  driver.cpp  localcontroller.h  localcontroller.i
include/: manifest.h  shared_array.h  timing.h
localcontroller/: .gitignore  CMakeLists.txt  localcontroller.cpp  localcontroller.h
mid2asc/: .gitignore  Makefile  notes.mid
midi2keypress/: Makefile  input.cpp  input.h  midi.cpp  midi.h  midi2keypress.cpp  tone.cpp  tone.h
midi2keypress/localcontroller/: Makefile  driver.cpp  localcontroller.cpp  localcontroller.h
midiordiethegame/: Console.gd  Console.tscn  Fretboard.gd  Fretboard.tscn  Layla.mid  Layla.ogg.import  Main.tscn  Meglovania.mid  Meglovania.mp3.mp3.import  Meglovania.ogg.import  MidiCPP.tres  MidiListener.gd  Note.gd  Note.tscn  NoteSpawner.gd  Rig.gd  String.tscn  Util.gd  dot.tscn  project.godot
midiordiethegame/.import/: Layla.ogg-d25251b7df93f87df3c2442e3167ca52.md5  Meglovania.mp3.mp3-316cbedd0fe282c84b6955c296531627.md5  Meglovania.ogg-0a4263edea2437297d7201adef51a18f.md5  Meglovania.ogg-0a4263edea2437297d7201adef51a18f.oggstr  dot.png-817e60bb21144207a105c203d112951c.md5  dot.png-c009b1c4c85719f89f80768b0ad78763.stex  triangle.png-53a0c5b2abae92a9e7f23d30d12f32c2.md5  triangle.png-7361e3a3de013e187c9fd9fc3fa761c1.etc2.stex  triangle.png-7361e3a3de013e187c9fd9fc3fa761c1.md5  triangle.png-7361e3a3de013e187c9fd9fc3fa761c1.s3tc.stex  triangle.png-7361e3a3de013e187c9fd9fc3fa761c1.stex
midiordiethegame/Fretboard/: Fretboard.gd  Fretboard.tscn  String.gd  String.tscn  dot.png.import  dot.tscn
midiordiethegame/MidiCPP/: Makefile
midiordiethegame/MidiCPP/src/: init.cpp
midiordiethegame/Note/: Note.gd  Note.tscn  NotePopper.gd  NotePopper.tscn  transparent.shader  triangle.png.import
midiordiethegame/test/: FretboardTest.gd  FretboardTest.tscn
server/: Makefile  main.cpp  server
signature_extraction_model/: acoustic_oren_calib_row48.npy  data_collection.py  record_silence.py  single_note_data_collection.py  workbook.ipynb
signature_extraction_model/tf_model/: saved_model.pb
signature_extraction_model/tf_model/variables/: variables.data-00000-of-00001  variables.index
socket/: CMakeLists.txt  Makefile  base.cpp  base.h  client.cpp  client.h  connection.cpp  connection.h  server.cpp  server.h
songs/gamma-ray/: old_notes.mid
testprograms/: Makefile  channelbroker_test.cpp  fft_histogram.cpp  test_fft2midi  test_fft2midi.cpp  testsocket  testsocket.cpp  visualize.py
